--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,49 @@ body {
   position: absolute;
   top: 10px;
   width: 100%;
-  /* text-align: center; */
+  z-index: 100;
+
+  color: white;
+  font-size: large;
+
+  user-select: none;
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+}
+
+#progress {
+  display: block;
+  position: absolute;
+  top: 0;
+  z-index: 100;
+
+  width: 100vw;
+  height: 20px;
+  background: #000;
+  /* border: 2px solid #000; */
+}
+
+#progress-bar {
+  /* width: 100%; */
+  height: 20px;
+  background: rgb(131, 58, 180);
+  background: linear-gradient(
+    90deg,
+    rgba(131, 58, 180, 1) 0%,
+    rgba(253, 29, 29, 1) 50%,
+    rgba(252, 176, 69, 1) 100%
+  );
+  border: none;
+
+  text-align: center;
+}
+
+#copy {
+  display: block;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
   z-index: 100;
 
   color: white;
