--- a/css/style.css
+++ b/css/style.css
@@ -73,3 +73,39 @@ body {
   -khtml-user-select: none;
   -webkit-user-select: none;
 }
+
+#overlay {
+  position: absolute;
+  font-size: 16px;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background: rgba(0, 0, 0, 0.7);
+  color: white;
+}
+
+#overlay h1 {
+  font-weight: 100;
+}
+
+#overlay p {
+  margin: 0 10em;
+  text-align: center;
+}
+
+#overlay button {
+  background: transparent;
+  border: 0;
+  border: 1px solid rgb(255, 255, 255);
+  border-radius: 4px;
+  color: #ffffff;
+  padding: 12px 18px;
+  text-transform: uppercase;
+  cursor: pointer;
+}
